...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_m"
                android:fontFamily="@font/officina_sans_scc_extrabold"
                android:gravity="start"
...
                    android:layout_marginTop="@dimen/spacing_xxs"
                    android:layout_marginEnd="@dimen/spacing_xl"
                    android:importantForAccessibility="no"
                    android:src="@drawable/separator" />

                <TextView
                    android:id="@+id/donation"
                    style="@style/TextStyle11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/help_money_text"
                    app:drawableTopCompat="@drawable/ic_coins" />
...
